v 1.3.37 - Added token to cookies, working on registry, other fixes